kubernetes/stage/hiclass-stage-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hi-class-api-ingress
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"  # TLS를 사용할 경우 주석처리
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - stageapi.hiclass.net
    secretName: aks-ingress-tls
  rules:
  - host: stageapi.hiclass.net
    http:
      paths:
      - path: /
        backend:
          serviceName: hi-class-api
          servicePort: 80
